# chiaki-borealis

./: CMakeLists.txt  README.md  msys2_gcc.md
.github/workflows/: build.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/metallic/chiaki/common/: AppDatabase.kt  DisplayHost.kt  RegisteredHost.kt  SerializedSettings.kt  TvUtils.kt
android/app/src/main/java/com/metallic/chiaki/lib/: Chiaki.kt
android/app/src/main/java/com/metallic/chiaki/main/: DisplayHostRecyclerViewAdapter.kt  MainActivity.kt
android/app/src/main/java/com/metallic/chiaki/manualconsole/: EditManualConsoleActivity.kt
android/app/src/main/java/com/metallic/chiaki/regist/: RegistActivity.kt  RegistExecuteViewModel.kt
android/app/src/main/java/com/metallic/chiaki/session/: StreamInput.kt
android/app/src/main/java/com/metallic/chiaki/settings/: SettingsRegisteredHostsAdapter.kt
android/app/src/main/res/drawable/: tv_banner.xml  tv_card_focus.xml
android/app/src/main/res/layout/: item_display_host.xml
android/app/src/main/res/menu/: main.xml
android/app/src/main/res/values/: strings.xml
gui/include/: host.h  manualhostdialog.h  registdialog.h  settings.h
gui/src/: host.cpp  mainwindow.cpp  manualhostdialog.cpp  registdialog.cpp  serveritemwidget.cpp  settings.cpp  settingsdialog.cpp
gui2/: CMakeLists.txt  CMakeLists.txt.bak  chiaki.conf
gui2/android/: .gitignore  build.gradle  settings.gradle
gui2/android/app/: build.gradle
gui2/android/app/jni/: CMakeLists.txt
gui2/android/app/src/main/: AndroidManifest.xml
gui2/android/app/src/main/java/com/chiaki/borealis/: ChiakiActivity.java
gui2/android/app/src/main/java/org/libsdl/app/: SDLControllerManager.java
gui2/android/app/src/main/res/drawable/: tv_banner.xml
gui2/android/app/src/main/res/values/: strings.xml
gui2/include/: gui.h  host.h  io.h  settings.h
gui2/src/: discoverymanager.cpp  gui.cpp  host.cpp  io.cpp  main.cpp  settings.cpp
lib/: CMakeLists.txt
lib/src/: ctrl.c  discovery.c  discoveryservice.c  log.c  regist.c  session.c  stoppipe.c
scripts/: appveyor-win.sh  build-ffmpeg.sh  github-alpine-build.sh  github-msys2-build.sh  github-ubuntu-build.sh
scripts/flatpak/: com.github.thestr4ng3r.Chiaki.json
